Added meta tag for share to socials into main html page.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -4,7 +4,17 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Domenico Angri Personal Website</title>
+        <!-- <title>Domenico Angri Personal Website</title> -->
+
+        <title>Gender Reveal Event di Domenico e Laura</title>
+        <meta name="description" content="Invito ufficiale per il Gender Reveal di Domenico e Laura!" />
+        <meta property="og:title" content="Gender Reveal Event di Domenico e Laura" />
+        <meta property="og:description" content="Invito ufficiale per il Gender Reveal di Domenico e Laura!" />
+        <meta property="og:image" content="https://www.domenicoangri.it/share-images/genderReveal.png" />
+        <meta property="og:url" content="https://www.domenicoangri.it/gender-reveal" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Gender Reveal Event di Domenico e Laura!" />
+        <meta property="og:locale" content="it_IT" />
     </head>
     <body>
         <div id="root"></div>
